--- a/arch/ctm/provisionFTPSite/default.HTML
+++ b/arch/ctm/provisionFTPSite/default.HTML
@@ -34,7 +34,7 @@ Use Case Model</span>
 </tbody>
 </table>
 <p></p>
-<p><b>Scope: </b>The Customer accesses an online form and fills out a request for provisioning an FTP site. This form includes supervisor information, disk space needed, an acceptable use policy review, and an expiration date for when access to the FTP site will cease. The HelpDesk receives this information and determines if supervisory approval is needed. If it is, the HelpDesk contacts the supervisor and receives a go/no go decision. (NOTE: Supervisor approval is pursuant to current operational policies.) Once approved, the HelpDesk uses the FTP software to configure the FTP account - this includes establishing anonymous or password protected access to the site. Should the disk needs for the FTP site exceed the standard allocation (quota), the HelpDesk will engage the Operations team to provision the additional disk space needs. Upon completion, they HelpDesk contacts the Customer to convey completion and any password information. <!-- IF INTERACTION OVERVIEW IS INCLUDED <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <span class="lbl">Select to enlarge...</span><br /> <a href="http://austinea.org/arch/law/***.jpg"><img src="http://austinea.org/arch/law/***.jpg" border="0" alt="" /></a><br /> <span style="font-weight: bold;">Interaction Overview</span> </td></tr></table> -->
+<p><b>Scope: </b>The Customer accesses an online form and fills out a request for provisioning an FTP site. This form includes supervisor information, disk space needed, an acceptable use policy review, and an expiration date for when access to the FTP site will cease. The HelpDesk receives this information and determines if supervisory approval is needed. If it is, the HelpDesk contacts the supervisor and receives a go/no go decision. (NOTE: Supervisor approval is pursuant to current operational policies.) Once approved, the HelpDesk uses the FTP software to configure the FTP account - this includes establishing anonymous or password protected access to the site. Should the disk needs for the FTP site exceed the standard allocation (quota), the HelpDesk will engage the Operations team to provision the additional disk space needs. Upon completion, the HelpDesk contact the Customer to convey completion and any password information. <!-- IF INTERACTION OVERVIEW IS INCLUDED <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <span class="lbl">Select to enlarge...</span><br /> <a href="http://austinea.org/arch/law/***.jpg"><img src="http://austinea.org/arch/law/***.jpg" border="0" alt="" /></a><br /> <span style="font-weight: bold;">Interaction Overview</span> </td></tr></table> -->
 <br>
 <!-- SEQUENCE DIAGRAM -->
 <table style="border-collapse: collapse;" align="center" border="0" cellpadding="5" cellspacing="0">
@@ -43,8 +43,7 @@ Use Case Model</span>
 <td align="center"><span class="lbl">Select
 to enlarge...</span><br>
 <a href="https://cityofaustin.github.io/austinea/arch/ctm/provisionFTPSite/sd01.jpg"><img src="https://cityofaustin.github.io/austinea/arch/ctm/provisionFTPSite/sd01.jpg" alt="" border="0" width="600"></a><br>
-<span style="font-weight: bold;">Processing
-Employment Discrimination Charges<br>
+<span style="font-weight: bold;">Provision FTP Site<br>
 Sequence Diagram</span>
 </td>
 </tr>
