--- a/training/TrainingPlan/index.html
+++ b/training/TrainingPlan/index.html
@@ -258,10 +258,7 @@ top candidates from these skill elements.
 <p>To select viable Candidate Architects, the Chief
 Enterprise Architect informs Department Leadership on the forthcoming
 Enterprise Architecture training program and requests nomination of
-Candidate Architects. Based on the required knowledge, skills and
-abilities, the Candidate Architects submits a one-page paper explaining
-why they feel qualified for EA training and what they plan to do with
-their new architecture skill. Department Leadership must commit to
+Candidate Architects. Department Leadership must commit to
 procuring the necessary tooling for each Candidate Architect and
 provide the candidate time for study and mentoring. Mentoring occurs
 based on department architecture needs - see <a href="#mentorship">Mentoring
