added new use case

--- a/arch/ctm/master_index.html
+++ b/arch/ctm/master_index.html
@@ -63,6 +63,9 @@ image for larger view<br>
 <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/provisionFTPSite/default.HTML" target="usecase">Provision FTP Site</a>
 </li>
 
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/sendRecordsOffsite/default.html" target="usecase">Send Records Offsite</a>
+</li>
+
 </ul>
 </td>
 
