added PMO links to master index

--- a/arch/ctm/master_index.html
+++ b/arch/ctm/master_index.html
@@ -57,6 +57,14 @@ image for larger view<br>
 <!-- sequence diagram  -->
 <td>
 <ul style="margin-left: 0px; padding-left: 20px;">
+
+
+ <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/addProjectToPWA/default.html" target="usecase">Add Project to Project Web Access (PWA)</a>
+</li> 
+
+ <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/AddPWALicenses/default.html" target="usecase">Add Project Web Access (PWA) Licenses</a>
+</li> 
+
  
  <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/moveFileToFTPSite/default.html" target="usecase">Move File to FTP Site</a>
 </li> 
