--- a/arch/municourt/manageDialerNoticesIO/index.html
+++ b/arch/municourt/manageDialerNoticesIO/index.html
@@ -38,8 +38,8 @@
 
 <!-- USE CASE IMAGE -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
-<span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/municourt/manageCollectionsInteractionOverview/io.jpg"><img src="/austinea/arch/municourt/manageDialerNoticesIO/io.jpg" usemap="#manageDialerNoticesIO" border="0" alt="" /></a><br />
+<span class="lbl">Select any use case for expanded detail...</span><br />
+<img src="/austinea/arch/municourt/manageDialerNoticesIO/io.jpg" usemap="#manageDialerNoticesIO" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Dialer Notices Interaction Overview</span>
 </td></tr></table>
 
