--- a/arch/corporateHR/master_index.html
+++ b/arch/corporateHR/master_index.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="StyleSheet" href="https://cityofaustin.github.io/austinea/style/style4.css" type="text/css">
 <!-- Web Browser Title -->
-<title>City Of Austin Law Department EA Catalogue</title>
+<title>American's with Disabilities Action (ADA) Office EA Catalogue</title>
 </head>
 
 <body>
@@ -39,12 +39,8 @@ image for larger view<br>
 <!-- Data Models -->
 <tr>
 <td>
+<b>No Data Models Mapped Yet</b>
 
-<ul style="margin-left: 0px; padding-left: 20px;">
-<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/" target="usecase">CTM Service Model</a>
-</li>
-
-</ul>
 
 </td>
 
