--- a/arch/ctm/onboardNewVendor/default.html
+++ b/arch/ctm/onboardNewVendor/default.html
@@ -26,7 +26,7 @@ Use Case Specification</p>
 <td align="center"><span class="lbl">Select
 to enlarge...</span><br>
 <a href="https://cityofaustin.github.io/austinea/arch/ctm/onboardNewVendor/ucd.jpg"><img src="https://cityofaustin.github.io/austinea/arch/ctm/onboardNewVendor/ucd.jpg" alt="" border="0"></a><br>
-<span style="font-weight: bold;">Add Project to Project Web Access<br>
+<span style="font-weight: bold;">Onboard Vendor/Contractor<br>
 Use Case Model</span>
 </td>
 </tr>
