added onboarding to main index

--- a/arch/ctm/onboardNewVendor/default.html
+++ b/arch/ctm/onboardNewVendor/default.html
@@ -37,7 +37,7 @@ Use Case Model</span>
 
 If access is denied, Security Contacts the Project Manager and indicates Denial of access. The Project manager then contacts the vendor to indicate the failure and closes the helpdesk ticket. 
 If access is accepted, Security contacts the vendor and the project manager to indicate the approval and closes the helpdesk ticket. The project manager contact the Project Online Admin to add the vendor Resource. The Project Online Admin submits a helpdesk ticket to add the vendor candidate to active directory for whatever resources are necessary for the project. HelpDesk routes the request to the Office 365 Administrator, who configures the necessary active directory access for the vendor and closes the Helpdesk Ticket. The Project Online Admin adds the resource to the Account Pool based on the approved access level. 
-If a new Project Web Online license is required to accommodate the new resource, the Project Online Admin performs the "ADD PWA LICENSES" process.  </p>
+<p>If a new Project Web Online license is required to accommodate the new resource, the Project Online Admin performs the "ADD PWA LICENSES" process.  </p>
 <!-- IF INTERACTION OVERVIEW IS INCLUDED <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <span class="lbl">Select to enlarge...</span><br /> <a href="http://austinea.org/arch/law/***.jpg"><img src="http://austinea.org/arch/law/***.jpg" border="0" alt="" /></a><br /> <span style="font-weight: bold;">Interaction Overview</span> </td></tr></table> -->
 <br>
 <!-- SEQUENCE DIAGRAM -->
