--- a/arch/ctm/master_index.html
+++ b/arch/ctm/master_index.html
@@ -68,6 +68,12 @@ image for larger view<br>
  
  <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/moveFileToFTPSite/default.html" target="usecase">Move File to FTP Site</a>
 </li> 
+
+ <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/onboardNewVendor/default.html" target="usecase">Onboard New Contractor/Vendor</a>
+</li> 
+
+
+
 <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/provisionFTPSite/default.HTML" target="usecase">Provision FTP Site</a>
 </li>
 
