--- a/arch/municourt/processDialerResults/index.html
+++ b/arch/municourt/processDialerResults/index.html
@@ -271,9 +271,9 @@ DIALPAS = Past Due Dialer Call<br>
 DIALSTP = Past Due STPP Dialer Call<br>
 DIALVOI = Dialer call left voice message<br>
 DIALWAR = Warrant Dialer Call<br>
-DIALWRP = Warrant Round Up Prk Dialer Call<br>
+DIALWRP = Warrant Amnesty Prk Dialer Call<br>
 DIALWRT = Post Warrant dialer call<br>
-DIALWRU = Warrant Round Up Traff Dialer Call
+DIALWRU = Warrant Amnesty Traff Dialer Call
 </td>
 </tr>
 <tr>
