--- a/arch/corporateHR/processRequestAccommodationAppeals/index.html
+++ b/arch/corporateHR/processRequestAccommodationAppeals/index.html
@@ -100,7 +100,7 @@ Requirement Description</th>
 <td rowspan="2"> </td>
 </tr>
 <tr>
-<td>If the decision is a denial of Appeal, the City Manager’s Office and Legal Department review risks of denial resulting in either upholding the denial or approval of Appeal.  </td>
+<td>If the decision is a denial of Appeal, the City Manager's Office and Legal Department review risks of denial resulting in either upholding the denial or approval of Appeal.  </td>
 </tr>
 <tr>
 <td rowspan="2">006</td>
