Added Intro class to Training Page

--- a/training/presentation.html
+++ b/training/presentation.html
@@ -34,6 +34,8 @@ AdobeReader (PDF) or PowerPoint 2010 (PPTX) form:
 </li>
 <li>Overview of EA Artifacts - <a href="OverviewOfEAArtifacts.pdf">PDF</a> | <a href="OverviewOfEAArtifacts.pptx">PPTX</a>
 </li>
+<li>Intro To Reading EA Artifacts - <a href="ReadingEnterpriseArchitectureArtifacts.pptx">PPTX</a> | <a href="ReadingEnterpriseArchitectureArtifactsSampleDoc.doc">SAMPLE DOCS</a>
+</li>
 <li>Introduction to UML - <a href="IntroductionToUML.pdf">PDF</a> | <a href="IntroductionToUML.pptx">PPTX</a>
 </li>
 <li>Service Delivery Strategy - <a href="/austinea/presentation/capability_goal.pptx">PPTX</a>
