--- a/arch/ctm/master_index.html
+++ b/arch/ctm/master_index.html
@@ -73,6 +73,9 @@ image for larger view<br>
 </li> 
 
 
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/providePWAAssistance/default.html" target="usecase">Provide Project Online Admin Assistance</a>
+</li>
+
 
 <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/provisionFTPSite/default.HTML" target="usecase">Provision FTP Site</a>
 </li>
