updated style sheet

--- a/arch/arr/index2.html
+++ b/arch/arr/index2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"><head>
-<link rel="StyleSheet" href="style4.css" type="text/css"><!-- Web Browser Title -->
+<link rel="stylesheet" href="https://cityofaustin.github.io/austinea/style/hover.css" type="text/css">
+<!-- Web Browser Title -->
 <title>Austin Resource Reclaimation EA Catalog</title><!--[if gte mso 9]><xml> <mso:CustomDocumentProperties> <mso:_dlc_DocId msdt:dt="string">CTM6SKM6WFAK-239-1274</mso:_dlc_DocId> <mso:_dlc_DocIdItemGuid msdt:dt="string">4b611de4-97a1-4e66-aef4-c218c2635bca</mso:_dlc_DocIdItemGuid> <mso:_dlc_DocIdUrl msdt:dt="string">http://coaspweb1/sites/CTM/EA/_layouts/15/DocIdRedir.aspx?ID=CTM6SKM6WFAK-239-1274, CTM6SKM6WFAK-239-1274</mso:_dlc_DocIdUrl> </mso:CustomDocumentProperties> </xml><![endif]--></head>
 <body>
 <h1 style="text-align: center; font-size: 20pt;">Austin
