fixed link issues

--- a/arch/arr/index2.html
+++ b/arch/arr/index2.html
@@ -18,7 +18,7 @@ Direct: (512) 974-2960 | Mobile: (512) 296-5276
 <td align="center">
 <p style="color: gray; font-size: 7pt;">Note: Select
 image for larger view<br>
-<a href="/austinea/arch/arr/caa.jpg"><img src="caa.jpg" border="0" width="600"></a>
+<a href="https://cityofaustin.github.io/austinea/arch/arr/caa.jpg"><img src="https://cityofaustin.github.io/austinea/arch/arr/caa.jpg" border="0" width="600"></a>
 </p>
 <p style="text-align: center; font-weight: bold;">Figure:
 COA Austin Resource Reclaimation Capability Area Architecture</p>
@@ -47,11 +47,11 @@ Information</th>
 <td><!-- Logical Data Models -->
 <ul style="margin-left: 0px; padding-left: 20px;">
 <!-- Logical Data Models -->
-<li style="font-size: 8pt;"><a href="/austinea/arch/arr/ldm/ldm.jpg" target="usecase">Austin
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/ldm/ldm.jpg" target="usecase">Austin
 Resource Reclaimation Logical Data Model</a>
 </li>
 
-<li style="font-size: 8pt;"><a href="/austinea/arch/arr/ldm/SWSLDM.jpg" target="usecase">Austin
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/ldm/SWSLDM.jpg" target="usecase">Austin
 Resource Reclaimation Solid Waste Services Logical Data Model</a>
 </li>
 
@@ -60,7 +60,7 @@ Resource Reclaimation Solid Waste Services Logical Data Model</a>
 </td>
 <td><!-- Sequence Diagrams -->
 <ul style="margin-left: 0px; padding-left: 20px;">
-<li style="font-size: 8pt;"><a href="/austinea/arch/arr/index.html" target="usecase"> Vehicle Fleet Technology Upgrade Analysis </a>
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/index.html" target="usecase"> Vehicle Fleet Technology Upgrade Analysis </a>
 </li>
 
 </ul>
