--- a/arch/arr/index2.html
+++ b/arch/arr/index2.html
@@ -60,7 +60,11 @@ Resource Reclaimation Solid Waste Services Logical Data Model</a>
 </td>
 <td><!-- Sequence Diagrams -->
 <ul style="margin-left: 0px; padding-left: 20px;">
-<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/index.html" target="usecase"> Vehicle Fleet Technology Upgrade Analysis </a>
+
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/index.html" target="usecase"> Employee Occupational Safety System Analysis (EOSS) </a>
+</li>
+
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/index.html" target="usecase"> Vehicle Fleet Technology Upgrade Analysis (VFTU) </a>
 </li>
 
 </ul>
