moved EOSS under ARR

--- a/arch/arr/eoss/department.html
+++ b/arch/arr/eoss/department.html
@@ -75,7 +75,7 @@ ul
 
 <div class=WordSection1>
 
-<p><a href="/austinea/arch/eoss/">Use Case Summary</a></p>
+<p><a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/">Use Case Summary</a></p>
 
 <p class=MsoNormal align=center style='margin-top:5.0pt;margin-right:0in;
 margin-bottom:5.0pt;margin-left:0in;text-align:center;background:white'><b><span
@@ -139,7 +139,7 @@ management with mobile device component</p>
 <p>There were also concerns that EOSS Manage Worker Compensation requirements overlapped
 with the city's future Human Capital Management (HCM) system, which is not the
 situation. If you observe <a
-href="/arch/eoss/manageDepartmentLevelWorkerCompensation/">Manage
+href="https://cityofaustin.github.io/arch/arr/eoss/manageDepartmentLevelWorkerCompensation/">Manage
 Department-Level Worker Compensation</a>, you can quickly determine the
 business information needs use the existing HCM processes to include Banner and
 Webstract to report Workers Compensation status. EA designed the requirements
@@ -153,8 +153,8 @@ solution to ensure the safety of our employees and the citizens we serve.</p>
 <p align=center style='text-align:center'><b>Table of Department Participation</b></p>
 
 <p align=center style='text-align:center'><a
-href="/arch/eoss/department.docx">MS Word Version</a> - <a
-href="/arch/eoss/department.xlsx">MS Excel Version</a></p>
+href="https://cityofaustin.github.io/arch/arr/eoss/department.docx">MS Word Version</a> - <a
+href="https://cityofaustin.github.io/arch/arr/eoss/department.xlsx">MS Excel Version</a></p>
 
 <div align=center>
 
@@ -767,10 +767,10 @@ require data entry.</p>
 </td></tr></table>
 <!-- Signature -->
 <p><img src="/austinea//image/Signature.jpg" border="0" width="143" height="83" alt="sign" /></p>
-<p><b>Rob Byrd</b> <span style="color: red; font-weight: bold;">|</span> <b>City of Austin</b>
+<p><b>Aaron Brown</b> <span style="color: red; font-weight: bold;">|</span> <b>City of Austin</b>
 <a href="http://www.linkedin.com/in/robbyrd"><img src="/austinea/image/linkedin.jpg" border="0" alt="LinkedIn Logo" /></a><br />
-Chief Enterprise Architect - Corporate<br />
-Direct: (512) 974-1615 | Mobile: (512) 431-0700</p>
+Senior Enterprise Architect - Corporate<br />
+Direct: (512) 974-2960 </p>
 </td></tr></table>
 
 <p>Copy:</p>
