--- a/arch/arr/eoss/manageDriversLicenseVerification/index.html
+++ b/arch/arr/eoss/manageDriversLicenseVerification/index.html
@@ -10,18 +10,18 @@
 <!-- Main Body -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" width="650" align="center">
 <tr><td style="padding: 0;" height="130" valign="top"><a href="">
-<img src="/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td></tr>
+<img src="https://cityofaustin.github.io/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td></tr>
 <!-- Text Area -->
 <tr><td>
 
-<p><a href="/austinea/arch/eoss/">EOSS Use Case Summary</a></p>
+<p><a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/">EOSS Use Case Summary</a></p>
 
 <p style="text-align: center; font-weight: bold;">Manage Drivers License Verification<br />Use Case Specification</p>
 
 <!-- Image Title -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/eoss/manageDriversLicenseVerification/UCD.jpg"><img src="/austinea/arch/eoss/manageDriversLicenseVerification/UCD.jpg" border="0" alt="" /></a><br />
+<a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/manageDriversLicenseVerification/UCD.jpg"><img src="https://cityofaustin.github.io/austinea/arch/arr/eoss/manageDriversLicenseVerification/UCD.jpg" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Drivers License Verification<br />Use Case Model</span>
 </td></tr></table>
 
@@ -30,7 +30,7 @@
 <!-- Image Title -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/eoss/manageDriversLicenseVerification/1SD.jpg"><img src="/austinea/arch/eoss/manageDriversLicenseVerification/1SD.jpg" border="0" alt="" /></a><br />
+<a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/manageDriversLicenseVerification/1SD.jpg"><img src="https://cityofaustin.github.io/austinea/arch/arr/eoss/manageDriversLicenseVerification/1SD.jpg" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Drivers License Verification<br />Sequence Diagram</span>
 </td></tr></table>
 
