--- a/arch/arr/eoss/manageDepartmentLevelWorkerCompensation/index.html
+++ b/arch/arr/eoss/manageDepartmentLevelWorkerCompensation/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Manage Department-Level Worker Compensation</title>
-<link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css" />
+<link rel="Stylesheet" href="https://cityofaustin.github.io/austinea/style/hover.css" type="text/css" />
 </head>
 <body bgcolor="#ddd8c2">
 <!-- Border Background Table -->
@@ -10,18 +10,18 @@
 <!-- Main Body -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" width="650" align="center">
 <tr><td style="padding: 0;" height="130" valign="top"><a href="">
-<img src="/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td></tr>
+<img src="https://cityofaustin.github.io/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td></tr>
 <!-- Text Area -->
 <tr><td>
 
-<p><a href="/austinea/arch/eoss/">EOSS Use Case Summary</a></p>
+<p><a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/">EOSS Use Case Summary</a></p>
 
 <p style="text-align: center; font-weight: bold;">Manage Department-Level Worker Compensation<br />Use Case Specification</p>
 
 <!-- Image Title -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/eoss/manageDepartmentLevelWorkerCompensation/UCD.jpg"><img src="/austinea/arch/eoss/manageDepartmentLevelWorkerCompensation/UCD.jpg" border="0" width="600" alt="" /></a><br />
+<a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/manageDepartmentLevelWorkerCompensation/UCD.jpg"><img src="https://cityofaustin.github.io/austinea/arch/arr/eoss/manageDepartmentLevelWorkerCompensation/UCD.jpg" border="0" width="600" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Department-Level Worker Compensation<br />Use Case Model</span>
 </td></tr></table>
 
@@ -30,7 +30,7 @@
 <!-- Image Title -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/eoss/manageDepartmentLevelWorkerCompensation/1SD.jpg"><img src="/austinea/arch/eoss/manageDepartmentLevelWorkerCompensation/1SD.jpg" border="0" width="600" alt="" /></a><br />
+<a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/manageDepartmentLevelWorkerCompensation/1SD.jpg"><img src="https://cityofaustin.github.io/austinea/arch/arr/eoss/manageDepartmentLevelWorkerCompensation/1SD.jpg" border="0" width="600" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Department-Level Worker Compensation Sequence Diagram</span>
 </td></tr></table>
 <br />
