--- a/arch/arr/eoss/performSafetyInspectionAndAudits/index.html
+++ b/arch/arr/eoss/performSafetyInspectionAndAudits/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Perform Safety Inspection and Audits</title>
-<link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css" />
+<link rel="Stylesheet" href="https://cityofaustin.github.io/austinea/style/hover.css" type="text/css" />
 </head>
 <body bgcolor="#ddd8c2">
 <!-- Border Background Table -->
@@ -10,7 +10,7 @@
 <!-- Main Body -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" width="650" align="center">
 <tr><td style="padding: 0;" height="130" valign="top"><a href="">
-<img src="/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td></tr>
+<img src="https://cityofaustin.github.io/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td></tr>
 <!-- Text Area -->
 <tr><td>
 
@@ -21,7 +21,7 @@
 <!-- Image Title -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/eoss/performSafetyInspectionAndAudits/performSafetyInspectionAndAuditsUCD.jpg"><img src="/austinea/arch/eoss/performSafetyInspectionAndAudits/performSafetyInspectionAndAuditsUCD.jpg" border="0" alt="" /></a><br />
+<a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/performSafetyInspectionAndAudits/performSafetyInspectionAndAuditsUCD.jpg"><img src="https://cityofaustin.github.io/austinea/arch/eoss/performSafetyInspectionAndAudits/performSafetyInspectionAndAuditsUCD.jpg" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Perform Safety Inspection and Audits<br />Use Case Model</span>
 </td></tr></table>
 
@@ -30,7 +30,7 @@
 <!-- Image Title -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/eoss/performSafetyInspectionAndAudits/1SD.jpg"><img src="/austinea/arch/eoss/performSafetyInspectionAndAudits/1SD.jpg" border="0" alt="" /></a><br />
+<a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/performSafetyInspectionAndAudits/1SD.jpg"><img src="https://cityofaustin.github.io/austinea/arch/arr/eoss/performSafetyInspectionAndAudits/1SD.jpg" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Perform Safety Inspection and Audits<br />Sequence Diagram</span>
 </td></tr></table>
 <br />
