--- a/arch/arr/eoss/implementCorrectiveSafetyAction/index.html
+++ b/arch/arr/eoss/implementCorrectiveSafetyAction/index.html
@@ -14,7 +14,7 @@
 <!-- Text Area -->
 <tr><td>
 
-<p><a href="https://cityofaustin.github.io/austinea/arch/eoss/">EOSS Use Case Summary</a></p>
+<p><a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/">EOSS Use Case Summary</a></p>
 
 <p style="text-align: center; font-weight: bold;">Implement Corrective Safety Action<br />Use Case Specification</p>
 
