--- a/arch/arr/eoss/performSafetyInspectionAndAudits/index.html
+++ b/arch/arr/eoss/performSafetyInspectionAndAudits/index.html
@@ -14,14 +14,14 @@
 <!-- Text Area -->
 <tr><td>
 
-<p><a href="/austinea/arch/eoss/">EOSS Use Case Summary</a></p>
+<p><a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/">EOSS Use Case Summary</a></p>
 
 <p style="text-align: center; font-weight: bold;">Perform Safety Inspection and Audits<br />Use Case Specification</p>
 
 <!-- Image Title -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/performSafetyInspectionAndAudits/performSafetyInspectionAndAuditsUCD.jpg"><img src="https://cityofaustin.github.io/austinea/arch/eoss/performSafetyInspectionAndAudits/performSafetyInspectionAndAuditsUCD.jpg" border="0" alt="" /></a><br />
+<a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/performSafetyInspectionAndAudits/performSafetyInspectionAndAuditsUCD.jpg"><img src="https://cityofaustin.github.io/austinea/arch/arr/eoss/performSafetyInspectionAndAudits/performSafetyInspectionAndAuditsUCD.jpg" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Perform Safety Inspection and Audits<br />Use Case Model</span>
 </td></tr></table>
 
