removed Rob from items

--- a/whitepaper/frameworks.html
+++ b/whitepaper/frameworks.html
@@ -62,9 +62,9 @@
 </td></tr></table> -->
 <!-- Signature -->
 
-<p><b>Rob Byrd</b> <span style="color: red; font-weight: bold;">|</span> <b>City of Austin</b>
+<p><b>Aaron Brown</b> <span style="color: red; font-weight: bold;">|</span> <b>City of Austin</b>
 <a href="http://www.linkedin.com/in/robbyrd"><img src="http://journeycolorado.com/images/linkedin.jpg" border="0" alt="LinkedIn Logo" /></a><br />
-Chief Enterprise Architect - Corporate<br />
+Senior Enterprise Architect - Corporate<br />
 </p>
 </td></tr></table>
 
