--- a/whitepaper/archViews/archViews.html
+++ b/whitepaper/archViews/archViews.html
@@ -45,9 +45,9 @@
 </td></tr></table>
 <!-- Signature -->
 <p><img src="http://journeycolorado.com/images/Signature.jpg" border="0" width="143" height="83" alt="sign" /></p>
-<p><b>Rob Byrd</b> <span style="color: red; font-weight: bold;">|</span> <b>City of Austin</b>
+<p><b>Aaron Brown</b> <span style="color: red; font-weight: bold;">|</span> <b>City of Austin</b>
 <a href="http://www.linkedin.com/in/robbyrd"><img src="http://journeycolorado.com/images/linkedin.jpg" border="0" alt="LinkedIn Logo" /></a><br />
-Chief Enterprise Architect - Corporate<br />
+Senior Enterprise Architect - Corporate<br />
 Direct: (512) 974-1615 | Mobile: (512) 431-0700</p>
 </td></tr></table>
 
