--- a/arch/municourt/index2.html
+++ b/arch/municourt/index2.html
@@ -63,7 +63,7 @@ Direct: (512) 974-2960 | Mobile: (512) 296-5276
 <!-- Logical Data Models -->
 
 <li style="font-size: 8pt;"><a href="/austinea/arch/municourt/report/update131010.html" target="usecase"> Fee's, Court Cost, and Fines Logical Data Model</a>
-
+<li style="font-size: 8pt;"><a href="/austinea/arch/municourt/MuniCourtLogicalDataModel.png" target="usecase"> Muni Court CMS Logical Data Model</a>
 
 
 </ul>
