--- a/arch/municourt/processDialerResults/index.html
+++ b/arch/municourt/processDialerResults/index.html
@@ -44,7 +44,7 @@ subsequent campaign as qualifying criteria allow.
 <!-- IF INTERACTION OVERVIEW IS INCLUDED 
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/municourt/***.jpg"><img src="/austinea/arch/municourt/***.jpg" border="0" alt="" /></a><br />
+<a href="/austinea/arch/municourt/***.jpg"><img src="/austinea/arch/municourt/processDialerResults/sd01.jpg" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Interaction Overview</span>
 </td></tr></table>
 
