--- a/arch/arr/index2.html
+++ b/arch/arr/index2.html
@@ -2,10 +2,10 @@
 <html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"><head>
 <link rel="stylesheet" href="https://cityofaustin.github.io/austinea/style/hover.css" type="text/css">
 <!-- Web Browser Title -->
-<title>Austin Resource Reclaimation EA Catalog</title><!--[if gte mso 9]><xml> <mso:CustomDocumentProperties> <mso:_dlc_DocId msdt:dt="string">CTM6SKM6WFAK-239-1274</mso:_dlc_DocId> <mso:_dlc_DocIdItemGuid msdt:dt="string">4b611de4-97a1-4e66-aef4-c218c2635bca</mso:_dlc_DocIdItemGuid> <mso:_dlc_DocIdUrl msdt:dt="string">http://coaspweb1/sites/CTM/EA/_layouts/15/DocIdRedir.aspx?ID=CTM6SKM6WFAK-239-1274, CTM6SKM6WFAK-239-1274</mso:_dlc_DocIdUrl> </mso:CustomDocumentProperties> </xml><![endif]--></head>
+<title>Austin Resource Recovery EA Catalog</title><!--[if gte mso 9]><xml> <mso:CustomDocumentProperties> <mso:_dlc_DocId msdt:dt="string">CTM6SKM6WFAK-239-1274</mso:_dlc_DocId> <mso:_dlc_DocIdItemGuid msdt:dt="string">4b611de4-97a1-4e66-aef4-c218c2635bca</mso:_dlc_DocIdItemGuid> <mso:_dlc_DocIdUrl msdt:dt="string">http://coaspweb1/sites/CTM/EA/_layouts/15/DocIdRedir.aspx?ID=CTM6SKM6WFAK-239-1274, CTM6SKM6WFAK-239-1274</mso:_dlc_DocIdUrl> </mso:CustomDocumentProperties> </xml><![endif]--></head>
 <body>
 <h1 style="text-align: center; font-size: 20pt;">Austin
-Resource Reclaimation Enterprise Architecture Information </h1>
+Resource Recovery Enterprise Architecture Information </h1>
 <!-- Austin Logo <img src="/austinea/image/AustinLogo.gif" width=104 height=105 alt="" border="0" align="right"> <p>The following models represents the capabilities from review of The City of Austin's Police Department. The use cases are organized by capability rather than organizational structure. <!-->POC:
 <b>Aaron Brown</b> <b class="red">|</b>
 <b>City of Austin</b><br>
@@ -21,7 +21,7 @@ image for larger view<br>
 <a href="https://cityofaustin.github.io/austinea/arch/arr/caa.jpg"><img src="https://cityofaustin.github.io/austinea/arch/arr/caa.jpg" border="0" width="600"></a>
 </p>
 <p style="text-align: center; font-weight: bold;">Figure:
-COA Austin Resource Reclaimation Capability Area Architecture</p>
+COA Austin Resource Recovery Capability Area Architecture</p>
 </td>
 </tr>
 </tbody>
