--- a/arch/arr/index2.html
+++ b/arch/arr/index2.html
@@ -48,11 +48,11 @@ Information</th>
 <ul style="margin-left: 0px; padding-left: 20px;">
 <!-- Logical Data Models -->
 <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/ldm/ldm.jpg" target="usecase">Austin
-Resource Reclaimation Logical Data Model</a>
+Resource Recovery Logical Data Model</a>
 </li>
 
 <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/ldm/SWSLDM.jpg" target="usecase">Austin
-Resource Reclaimation Solid Waste Services Logical Data Model</a>
+Resource Recovery Solid Waste Services Logical Data Model</a>
 </li>
 
 
