--- a/arch/arr/index2.html
+++ b/arch/arr/index2.html
@@ -63,6 +63,9 @@ Resource Recovery Solid Waste Services Logical Data Model</a>
 
 <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/eoss/index.html" target="usecase"> Employee Occupational Safety System Analysis (EOSS) </a>
 </li>
+  
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/performAdjustmentToUtilityBill/default.html" target="usecase"> Perform Adjustment to Utility Bill </a>
+</li>  
 
 <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/arr/index.html" target="usecase"> Vehicle Fleet Technology Upgrade Analysis (VFTU) </a>
 </li>
